fix: overflow on idex page

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -87,6 +87,12 @@
   font-synthesis: none;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 :where(html, body) {
   margin: 0;
 }
